# oto_desktop

./: .gitignore  CONTRIBUTING.md  README.md  check.ps1  check.sh  org.flatpak.oto.yml  package.json  setup.ps1  setup.sh  test_whisper.sh
.claude/: settings.local.json
.github/workflows/: build.yml
scripts/: beta_testers.csv.example  mac_build_beta.sh  windows_build_beta.ps1
src/: index.html  overlay.html
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/hotkey-helper/: main.swift
src-tauri/resources/: oto-hotkey-helper
src-tauri/src/: db.rs  main.rs  models.rs  paths.rs  prompts.rs
