[package]
name = "oto-desktop"
version = "0.1.0"
description = "Oto Desktop - Live2D character overlay"
authors = ["Frisson Labs"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "protocol-asset", "tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["rustls-tls", "json", "multipart", "stream"] }
futures-util = "0.3"
tokio = { version = "1", features = ["fs", "io-util"] }
dirs = "5.0"
zip = "2"
rdev = { git = "https://github.com/kunkunsh/rdev" }
tauri-plugin-global-shortcut = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
rusqlite = { version = "0.31", features = ["bundled"] }
base64 = "0.22"
chrono = "0.4"
image = "0.25"
tauri-plugin-log = "2"
tauri-plugin-autostart = "2"
log = "0.4"
urlencoding = "2"
mime_guess = "2"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = "0.3"
objc2-foundation = "0.3"
core-graphics = "0.24"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Foundation",
    "Win32_Graphics_Gdi"
] }
